Fixed a few things

--- a/SpecialFooter.html
+++ b/SpecialFooter.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Candal&family=Lora&display=swap" rel="stylesheet">
 
     <!-- Custom Styling -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
     <title>West Fork Fellowship</title>
 </head>
