--- a/SpecialHeader.html
+++ b/SpecialHeader.html
@@ -11,13 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Candal&family=Lora&display=swap" rel="stylesheet">
 
     <!-- Custom Styling -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 
 
 <body>
     <header style="background-color: rgb(138, 167, 184);">
+    
         <div class="logo">
             <!-- <h1 class="logo-text"><span>Quick</span>Theology</h1> -->
             <a href="/index.html">
