Sidebar now disappears at 800px

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/pages/FiveSolas.html">The Five Solas</a></li>
                 <li><a href="/pages/Gospel.html">The Gospel</a></li>
-                <li><a href="/pages/info.html">Info</a></li>
+                <li><a href="/pages/Info.html">Info</a></li>
                 <li><a href="/pages/Membership.html">Membership</a></li>
                 <li><a href="/pages/Purpose.html">What is our Purpose</a></li>
                 <li><a href="/pages/Resources.html">Resources</a></li>
