--- a/pages/Info.html
+++ b/pages/Info.html
@@ -50,17 +50,29 @@
         <h3>pastorEmail@example.com</h3>
     </div>
 
+    <!--JQuery-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <script>
         fetch('../SpecialHeader.html')
         .then(response => response.text())
         .then(data => {
             document.querySelector('special-header').outerHTML = data;
-        });
-        fetch('../SpecialFooter.html')
-            .then(response => response.text())
-            .then(data => {
-                document.body.insertAdjacentHTML('beforeend', data);
+
+            // Initialize menu toggle functionality after header is loaded
+            const menuToggle = document.querySelector('.menu-toggle');
+            const nav = document.querySelector('header ul');
+
+            menuToggle.addEventListener('click', () => {
+                nav.classList.toggle('showing');
             });
+        });
+
+        fetch('../SpecialFooter.html')
+        .then(response => response.text())
+        .then(data => {
+            document.body.insertAdjacentHTML('beforeend', data);
+        });
     </script>
 </body>
 </html>
