testing audio files and Bible verse popups

--- a/SpecialFooter.html
+++ b/SpecialFooter.html
@@ -34,6 +34,7 @@
                 </div>
             </div>
             <div class="footer-section services">
+                <h1 class="logo-text">LOCATION AND SERVICES<br></h1>
                 <p>
                     41 Orange Drive Fairmont, WV 26554<br>
                     Sunday Service: 10:30am - 12:00pm<br>
@@ -41,7 +42,7 @@
                     Location Varies<br>
                     Thursday Study: 7:00pm - 8:00pm<br>
                     Tuesday Prayer Meeting: 7:00pm - 8:00pm<br>
-                    Saturdat Mens Study: 8:00am - 9:00am<br>
+                    Saturday Mens Study: 9:00am - 10:00am<br>
                 </p>
             </div>
             <div class="footer-section location">
