--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <div class="main-content">
         <header>
             <div class="logo">
-                <!-- <h1 class="logo-text"><span>Quick</span>Theology</h1> -->
                 <a href="/index.html">
                     <!-- <img src="/images/WFF_Header_logo.png" style="width:300px;"> -->
                     <!-- <img src="/images/WFF_Header_logo2.png" class="logo-image"> -->
@@ -53,11 +52,7 @@
                 <li><a href="/pages/info.html">Info</a></li>
         </div>
     </div>
-    <!-- // center-btns Wrapper -->
 
-        
-    </div>
-    
 
     <!-- footer -->
      <div class="footer">
@@ -75,6 +70,7 @@
                 </div>
             </div>
             <div class="footer-section services">
+                <h1 class="logo-text">LOCATION AND SERVICES<br></h1>
                 <p>
                     41 Orange Drive Fairmont, WV 26554<br>
                     Sunday Service: 10:30am - 12:00pm<br>
@@ -82,7 +78,7 @@
                     Location Varies<br>
                     Thursday Study: 7:00pm - 8:00pm<br>
                     Tuesday Prayer Meeting: 7:00pm - 8:00pm<br>
-                    Saturday Mens Study: 8:00am - 9:00am<br>
+                    Saturday Mens Study: 9:00am - 10:00am<br>
                 </p>
             </div>
             <div class="footer-section location">
