--- a/pages/Membership.html
+++ b/pages/Membership.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Gospel - West Fork Fellowship</title>
+    <title>Membership - West Fork Fellowship</title>
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- <style>
       
