sermons added, and testing verses

--- a/pages/Sermons.html
+++ b/pages/Sermons.html
@@ -35,7 +35,7 @@
                         <div class="sermon">
                             <h3>Gal 2:20 April 20, 2025</h3>
                             <audio controls>
-                                <source src="../audio/Easter 20 Apr 2025 Gal 2 20.m4a" type="audio/mp4">
+                                <source src="../audio/Easter 20 Apr 2025 Gal 2 20_shrunk.mp3" type="audio/mp3">
                                 Your browser does not support the audio element.
                             </audio>
                         </div>
@@ -44,7 +44,7 @@
                         <div class="sermon">
                             <h3>1 Pet 3:1-7 April 27, 2025</h3>
                             <audio controls>
-                                <source src="../audio/2025 Apr 27 1 Pet 3 1-7.m4a" type="audio/mp4">
+                                <source src="../audio/2025 Apr 27 1 Pet 3 1-7_shrunk.mp3" type="audio/mp3">
                                 Your browser does not support the audio element.
                             </audio>
                         </div>
@@ -53,7 +53,7 @@
                         <div class="sermon">
                             <h3>1 Pet 3:8-12 Introduction; May 4, 2025</h3>
                             <audio controls>
-                                <source src="../audio/2025 May 4 Intro.m4a" type="audio/mp4">
+                                <source src="../audio/2025 May 4 Intro.m4a" type="audio/m4a">
                                 Your browser does not support the audio element.
                             </audio>
                         </div>
@@ -62,7 +62,7 @@
                         <div class="sermon">
                             <h3>1 Pet 3:8-12 May 4, 2025</h3>
                             <audio controls>
-                                <source src="../audio/2025 May 4 1 Pet 3 8-12.m4a" type="audio/mp4">
+                                <source src="../audio/2025 May 4 1 Pet 3 8-12_shrunk.mp3" type="audio/mp3">
                                 Your browser does not support the audio element.
                             </audio>
                         </div>
@@ -71,7 +71,7 @@
                         <div class="sermon">
                             <h3>1 Pet 3:13-17 May 11, 2025</h3>
                             <audio controls>
-                                <source src="../audio/2025 May 11 1 Pet 3_13-17.m4a" type="audio/mp4">
+                                <source src="../audio/2025 May 11 1 Pet 3_13-17.mp3" type="audio/mp3">
                                 Your browser does not support the audio element.
                             </audio>
                         </div>
